force-app/main/default/objects/Case/fields/caseman__IncidentType__c.field-meta.xml
<CustomField>
    <fullName>caseman__IncidentType__c</fullName>
    <description>The nature of the incident. Values are determined by your Admin.</description>
    <inlineHelpText>The nature of the incident. Values are determined by your Admin.</inlineHelpText>
    <label>Incident Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verbal threat/abuse</fullName>
            </value>
            <value>
                <fullName>Attempted or actual physical assault</fullName>
            </value>
            <value>
                <fullName>Attempted or actual self-harm</fullName>
            </value>
            <value>
                <fullName>Property Damage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>