force-app/main/default/objects/Case/fields/caseman__Intake__c.field-meta.xml
<CustomField>
    <fullName>caseman__Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Intake related to this referral.</description>
    <label>Intake</label>
    <referenceTo>caseman__Intake__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>