force-app/main/default/objects/Case/fields/caseman__Program__c.field-meta.xml
<CustomField>
    <fullName>caseman__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>pmdm__Program__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>