force-app/main/default/objects/Case/fields/caseman__ReferralOrganization__c.field-meta.xml
<CustomField>
    <fullName>caseman__ReferralOrganization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The organization referring to us on an inbound referral, or the organization we are referring to on an outbound referral.</description>
    <label>Referral Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Organization Referrals</relationshipLabel>
    <relationshipName>OrganizationReferrals</relationshipName>
    <type>Lookup</type>
</CustomField>