force-app/main/default/objects/Case/fields/caseman__ReferralOrganizationContact__c.field-meta.xml
<CustomField>
    <fullName>caseman__ReferralOrganizationContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The key contact at the organization referring to us on an inbound referral, or at the organization we are referring to on an outbound referral, if known.</description>
    <label>Referral Organization Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Referrals</relationshipLabel>
    <relationshipName>ContactReferrals</relationshipName>
    <type>Lookup</type>
</CustomField>