force-app/main/default/objects/Case/fields/caseman__ReferralResult__c.field-meta.xml
<CustomField>
    <fullName>caseman__ReferralResult__c</fullName>
    <label>Referral Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
            </value>
            <value>
                <fullName>Client Declined Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>