force-app/main/default/objects/Case/fields/caseman__WatchList__c.field-meta.xml
<CustomField>
    <fullName>caseman__WatchList__c</fullName>
    <formula>Contact.caseman__WatchList__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Watch List</label>
    <type>Checkbox</type>
</CustomField>