force-app/main/default/objects/Case/recordTypes/caseman__InboundReferral.recordType-meta.xml
<RecordType>
    <fullName>caseman__InboundReferral</fullName>
    <active>true</active>
    <businessProcess>caseman__Referral Status</businessProcess>
    <label>Inbound Referral</label>
</RecordType>