force-app/main/default/objects/Case/recordTypes/caseman__Incident.recordType-meta.xml
<RecordType>
    <fullName>caseman__Incident</fullName>
    <active>true</active>
    <businessProcess>caseman__Incident</businessProcess>
    <label>Incident</label>
</RecordType>