force-app/main/default/objects/Case/recordTypes/caseman__OutboundReferral.recordType-meta.xml
<RecordType>
    <fullName>caseman__OutboundReferral</fullName>
    <active>true</active>
    <businessProcess>caseman__Referral Status</businessProcess>
    <label>Outbound Referral</label>
</RecordType>