force-app/main/default/objects/Case/listViews/caseman__CaseManagement_InboundReferrals.listView-meta.xml
<ListView>
    <fullName>caseman__CaseManagement_InboundReferrals</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.NAME</columns>
    <columns>caseman__ReferralOrganization__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.caseman__InboundReferral</value>
    </filters>
    <label>Case Management: Inbound Referrals</label>
</ListView>